<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_fragment_start_screen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentStartScreen"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_summary"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/main_summary"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/button_start"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"

        android:background="@drawable/round_corners_button"
        android:text="@string/button_start"
        android:textColor="#14171C"
        app:backgroundTint="#07BBBB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_summary" />

</androidx.constraintlayout.widget.ConstraintLayout>